cmake_minimum_required(VERSION 3.16)

project(cpp_exercises)

set(CMAKE_CXX_STANDARD 23)

enable_testing()

add_subdirectory(autocomplete_system)
add_subdirectory(cake_cutting)
add_subdirectory(calculator)
add_subdirectory(count_of_smaller_numbers_after_self)
add_subdirectory(fill_color)
add_subdirectory(highway_toll)
add_subdirectory(lru_cache)
add_subdirectory(median_of_two_sorted_arrays)
add_subdirectory(return)
add_subdirectory(remove_stones)
add_subdirectory(shortest_path)
add_subdirectory(split_array_largest_sum)
add_subdirectory(tag_dispatch)
add_subdirectory(tag_dispatch3)
add_subdirectory(word_search_2)
add_subdirectory(zero_array_transformation_2)